handle hidden rows/cols in undo/redo of ir/ic/dr/dc
handled issue #374
added backwards search with '?'
restore \\* from old SC. \\{char} fills the cell with n occurrences of {char} to complete its width
issue #429
multiple frozen rows/columns (fr / fc in normal mode)
new autowrap config value. works only when nooverlap and notruncate are set.
store frozen rows and cols when saving file


Pending
-------
test calc_offscr_rows and calc_offscr_cols
handle \n in cell input
change input bar from window to pad
check all cmds movement functions after new frozen mods
save offscr_sc_rows, offscr_sc_cols, COLS and LINES values when saving file

show_cmd
notimeout
edit!

format MODE?
restore comments
handle content alignment over multiple lines in cmds.c:pad_and_align
handle mouse clicks in edition mode.

Rethink LUA evaluation

--
Thanks to all that helped and created PR.
Thanks to all who support and use this program.

Andrés Martinelli
andmarti1424


***********
v0.8.1
Released April 1st 2021

New features
------------
Braille support
Added latex export - issue #394
Added mappings for command mode
Work on issues #225 and #247: support mapping of ñ and other special chars
Basic ODS file import
Paste to a range of selected cells - (actually added on v0.8 - issue 438 - PR 445)
Added txtdelim | for csv files import - issue 409
Added macros to --version (show version)
Support higher versions of lua.
Handle ESC key in mappings. related to issue #492.
Added freeze to visual mode - issue #459

Changes
--------
Recognise SPACE in mappings rather than simple ' '
Visual change: Moved cmd multiplier to the left of mode
Changed default headings colors
many improvements to the config facility and usage - PR 519
improved sort for 65k rows

Fixes
-----
Fix issues on CIRCULAR REFERENCES: #473 #201 #475 #321. these were as hard.
Fix issue 417 and added a date type in xlsx import.
Fix Engformat overlap text y número. Mostraba * (actually fixed on v0.8)