@@ -312,6 +312,7 @@ void ui_do_welcome() {
     int mxrow = offscr_sc_rows + calc_offscr_sc_rows() - 1;
     ui_show_sc_col_headings(main_win, mxcol);
     ui_show_sc_row_headings(main_win, mxrow);
+    ui_show_content(main_win, mxrow, mxcol);
 
     #ifdef USECOLORS
     ui_set_ucolor(main_win, &ucolors[WELCOME], DEFAULT_COLOR);
